plugins {
    id "java"
}

sourceCompatibility = targetCompatibility = 12

compileJava {
    options.compilerArgs = [
            "--enable-preview",
            "-Xplugin:jabel"
    ]
}

compileTestJava {
    sourceCompatibility = targetCompatibility = 8
}

test {
    def java8home = System.getenv("JAVA_HOME_8")
    if (!java8home) {
        throw new IllegalStateException("JAVA_HOME_8 must be set")
    }
    executable = "$java8home/bin/java"
}

dependencies {
    annotationProcessor project(":jabel-javac-plugin")

    testCompile 'junit:junit:4.12'
}